# large_json_agent

./: .gitignore  .replit  data_prep.py  langgraph.json  main.py  pyproject.toml  test_data.duckdb  test_hierarchical_tool.py  test_query.py
.langgraph_api/: .langgraph_ops.pckl
agents/: agent.py  duckdb_json_agent.py  smolagent.py  tools.py
data/: llamacloud.json  test_data.json  test_data_schema.json
