[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.112.0"
uvicorn = "0.23.2"
spyql = "^0.9.0"
langchain-openai = "^0.3.6"
langgraph-supervisor = "^0.0.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
duckdb = "^1.2.0"
orjson = "^3.10.15"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"